# SI-Exam

./: README.md  docker-compose.yml
gateway/: .gitignore  config.toml  dockerfile  pyproject.toml  requirements.txt  run_flask.sh
gateway/src/: main.py
gateway/src/clients/rest/: rest_exam.py  rest_grade.py  rest_hybrid.py  rest_person.py
gateway/src/clients/soap/: soap_school_class.py
gateway/src/entities/: exam.py  grade.py  person.py  school_class.py
gateway/src/server/routes/: basic_routes.py  exam_routes.py  grade_routes.py  person_routes.py  school_class_routes.py
gateway/src/utils/: config.py
gateway/tests/: test_gateway.py
warehouse/: .env  Cargo.toml  build.rs  config.toml
warehouse/migrations/: 20211108230240_groups.down.sql  20211108230240_groups.up.sql  20211109133829_people.up.sql  20211109133935_check_ins.down.sql  20211109133935_check_ins.up.sql  20211110220306_people_m2m_groups.down.sql  20211110220306_people_m2m_groups.up.sql  20211113155357_groups_m2m_check_ins.down.sql  20211113155357_groups_m2m_check_ins.up.sql  20211116211850_people_m2m_check_ins.down.sql  20211116211850_people_m2m_check_ins.up.sql
warehouse/proto/: group.proto  student.proto  teacher.proto  user.proto
warehouse/src/: main.rs
warehouse/src/connection/: pg_connection.rs
warehouse/src/entities/: check_in.rs  group.rs  mod.rs  person.rs
warehouse/src/logic/: cryptography.rs  mod.rs  query_utils.rs
warehouse/src/routes/: group_routes.rs  mod.rs  person_routes.rs  student_routes.rs  teacher_routes.rs
warehouse/src/utils/: config.rs  time.rs
(+6 files in other folders)
